<resources>
    <string name="app_name">GitHub User App API</string>
    <string name="username">Username</string>
    <string name="name_of_user">Name of User</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="search">Search</string>
    <string name="menu_1">About</string>
    <string name="menu_2">Help</string>
    <string name="search_hint">Type username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_name">Muhammad Farhan Pratama</string>
    <string name="help_version">This mobile app is the 1.1 version</string>
    <string name="greetings">Welcome to Github User App!</string>
    <string name="made_by">made by</string>
    <string name="user_ava">User Ava</string>
    <string name="favourite">Favourite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
</resources>