<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_baseline_favorite_24_white"
        android:title="@string/favourite"
        app:showAsAction="collapseActionView|always"/>
    <group
        android:menuCategory="container">
        <item android:id="@+id/settings"
            android:title="@string/settings"/>
        <item android:id="@+id/menu1"
            android:title="@string/menu_1"/>
        <item android:id="@+id/menu2"
            android:title="@string/menu_2"/>
    </group>
</menu>